tests/ui/endpoint-result-removed.rs
fn takes_endpoint_result(_: hibana::EndpointResult<()>) {}

fn main() {}
